[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "apex-restpy"
version = "1.0.0"
description = "A Python library for connecting to Oracle APEX RESTful APIs — Python adaptation of ApexBridge."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ata Can Yaymacı", email = "atacanymc@gmail.com" }
]
keywords = ["oracle", "apex", "rest", "api", "http", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/AtaCanYmc/ApexRestpy"
Repository = "https://github.com/AtaCanYmc/ApexRestpy"
"Bug Tracker" = "https://github.com/AtaCanYmc/ApexRestpy/issues"
"C++ Original" = "https://github.com/AtaCanYmc/ApexBridge"

[tool.setuptools.packages.find]
where = ["."]
include = ["apex_restpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
